--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
   <footer>
     <p>© 2025 BattlePaws of Azeria. All rights reserved.</p>
+    <br>
+    <img src="CV.png" alt="CV">
   </footer>
 </body>
 </html>
